# sarus

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: deployment.yml  rust.yml
sarus_data_spec/: generate_proto.py
src/: lib.rs  utils.rs
src/data_spec/: mod.rs
src/data_spec/examples/: census_demo.rs  mod.rs  retail_demo.rs  simple.rs
src/protobuf/: attribute.rs  bounds.rs  constraint.rs  dataset.rs  links.rs  manager.rs  marginals.rs  mod.rs  multiplicity.rs  path.rs  predicate.rs  proto_container.rs  relation.rs  scalar.rs  schema.rs  size.rs  statistics.rs  status.rs  transform.rs  type_.rs
tests/: extract.rs
tests/extract/: dataset.txt  schema.txt  size.txt
