[package]
authors = ["Nicolas Grislain <ng@sarus.tech>"]
name = "qrlew-sarus"
version = "1.0.0"
edition = "2021"
description = "Sarus interfeces"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
qrlew = "0.1"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
itertools = "0.10"
paste = "1.0.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
protobuf = "3.2"
protobuf-json-mapping = "3.2"

[build-dependencies]
glob = "0.3"
protobuf = "3.2"
protobuf-codegen = "3.2"
